@@ -12,6 +12,7 @@
 	* user interface improvements:
 	  - Monster Targeting v1.2 (by Pasi Kallinen)
 	  - Changed 'C' to present a menu (from NAO)
+	  - Hiding useless options in TTY mode
 
 	* bug fixes:
 	  - Fixed crash when player polyed into gold dragon because of wearing
